--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <title>React-Redux App</title>
-</head>
-<body>
+  <head>
+      <title>React-Redux App</title>
 
-</body>
+      <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+      <!-- load css -->
+  </head>
+  <body>
+    <!-- load js -->
+  </body>
 </html>
