Set up webpack configs

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>React-Redux App</title>
+    <title>React-Redux App</title>
 
-      <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-      <!-- load css -->
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
   </head>
   <body>
-    <!-- load js -->
+    <div class="main"></div>
   </body>
 </html>
