Added webpack serve with hot-reloading

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
   </head>
   <body>
-    <div class="main"></div>
+    <div id="main"></div>
   </body>
 </html>
