--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>React-Redux App</title>
 
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <meta name="format-detection" content="telephone=no">
   </head>
   <body>
     <div id="main"></div>
